# scsp

./: .gitignore  Cargo.toml  Makefile  README.md  client.go  connections.go  go.mod  go.sum  scsp.pb.go  scsp.proto  scsp_grpc.pb.go  server.go  slave.go
clipboard/: clipboard.go
cluster/: cluster.go
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  app.rs
crates/server/: Cargo.toml
crates/server/src/: server.rs
main/: main.go
src/: lib.rs  main.rs
src/client/: client.rs
src/clip/: listener.rs
src/context/: ctx.rs
src/control/: info.rs  mod.rs  register.rs  writer.rs
src/core/: cmm.rs  consts.rs  data.rs  errs.rs  mod.rs  pubsub.rs
src/data/: writer.rs
src/utils/: flags.rs
