[package]
name = "scsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features=["json"]}
rocket_ws = "0.1.0"
serde_json = "1.0.113"
serde = "1.0.194"
log = "0.4"
simple_logger = "4.3.3"

[workspace]
members = ["crates/*"]

