[package]
name = "scsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features=["json"]}
rocket_ws = "0.1.0"
serde_json = "1.0.113"
serde = "1.0.194"
log = "0.4"
simple_logger = "4.3.3"

# https://docs.rs/reqwest/latest/reqwest/
reqwest = { version = "0.11", features = ["blocking", "json"] }
# https://docs.rs/websocket/latest/websocket/client/builder/struct.ClientBuilder.html
websocket = "0.27.0"
url = "2.5.0"
regex = "1.10.3"

[workspace]
members = ["crates/*"]

