[package]
name = "scsp-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/agent.rs"

[dependencies]
scsp = {path = "../..", version="0.1.0"}
log = "0.4"
simple_logger = "4.3.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
